--- a/category/알고리즘.md
+++ b/category/알고리즘.md
@@ -1,7 +1,7 @@
 ---
 layout: category
 title: 알고리즘
-permalink: '/Programming/알고리즘'
+permalink: '/Category/알고리즘'
 ---
 
 Another sample category page.
