--- a/category/환경설정.md
+++ b/category/환경설정.md
@@ -2,6 +2,10 @@
 layout: category
 title: 환경설정
 permalink: '/Category/환경설정'
+pagination:
+    enabled: true
+    category: 환경설정
+    permalink: /:num/
 ---
 
 Another sample category page.
