--- a/categories/환경설정.md
+++ b/categories/환경설정.md
@@ -6,6 +6,9 @@ pagination:
     enabled: true
     category: 환경설정
     permalink: /:num/
+
 ---
 
-Another sample category page.
+<style>
+    background-imgae: url('/public/logo.png');
+</style>
