--- a/_posts/2019-10-04-markdown문법.md
+++ b/_posts/2019-10-04-markdown문법.md
@@ -7,7 +7,7 @@ category: [Markdown]
 Markdown 문법에 대해 알아보자
 <!--more-->
 
-# 제목
+## 1. 제목
 ---
 
 # 제목
@@ -26,7 +26,7 @@ Markdown 문법에 대해 알아보자
 
 <br>
 
-# 강조
+## 2. 강조
 ---
 이텔릭체(`<em>`)는 *별표* 혹은 _언더바_ 를 사용<br>
 두껍게(`<strong>`)는 **별표 2개** 혹은 __언더바2개__ 를 사용<br>
@@ -35,7 +35,7 @@ Markdown 문법에 대해 알아보자
 
 <br>
 
-# 목록
+## 3. 목록
 ---
 1. 순서1
 1. 순서2
@@ -53,7 +53,7 @@ Markdown 문법에 대해 알아보자
 
 <br>
 
-# 링크
+## 4. 링크
 ---
 [google](https://gogle.com)
 
@@ -72,12 +72,12 @@ Markdown 문법에 대해 알아보자
 
 <br>
 
-# 이미지
+## 5. 이미지
 ---
 
 <br>
 
-# 코드 강조
+## 6. 코드 강조
 ---
 `인라인 코드 강조`
 
@@ -123,12 +123,12 @@ No language
 # 표
 ---
 |값|의미|기본값|
-|---|---|---|
+|:----:|:----:|:----:|
 |static|유형 없음|static|
 
 <br>
 
-# 인용문
+## 7. 인용문
 ---
 인용문
 > `>`  기호를 사용
@@ -137,7 +137,7 @@ No language
 >> 중첩된 인용문 가능
 >>> 중첩된 인용문 가능
 
-# 수평선
+## 8. 수평선
 ---
 ---
 `-`
@@ -150,7 +150,7 @@ ___
 
 <br>
 
-# 줄바꿈
+## 9. 줄바꿈
 ---
 줄바꿈의 경우 '2번의 띄워쓰기'나  
 html의 `<br>`을 <br> 
