--- a/_posts/2019-10-04-markdown문법.md
+++ b/_posts/2019-10-04-markdown문법.md
@@ -80,6 +80,14 @@ Markdown 문법에 대해 알아보자
 `![이미지이름](이미지경로)`
 ![logo](/public/img/logo.png)
 
+
+이미지 크기  
+`![이미지이름](이미지경로 "width:20px;height:20px")`
+![logo](/public/img/logo.png "width:50px;height:20px;")
+
+이미지 정렬  
+`![이미지이름](이미지경로) {:.alignleft}`
+![logo](/public/img/logo.png){:.alignleft}
 <br>
 
 ## 6. 코드 강조
