--- a/_posts/2019-10-04-markdown문법.md
+++ b/_posts/2019-10-04-markdown문법.md
@@ -81,13 +81,16 @@ Markdown 문법에 대해 알아보자
 ![logo](/public/img/logo.png)
 
 
+
 이미지 크기  
-`![이미지이름](이미지경로 "width:20px;height:20px")`
-![logo](/public/img/logo.png "width:50px;height:20px;")
+`<img src="url" width=20px height=20px></img>`  
+<img src="../public/img/logo.png" width=20px height=20px></img>
 
 이미지 정렬  
-`![이미지이름](이미지경로) {:.alignleft}`
-![logo](/public/img/logo.png){:.alignleft}
+`![이미지이름](이미지경로) {:.alignleft}`  
+<img src="../public/img/logo.png" width=20px height=20px style="text-align:right"></img>  
+<img src="../public/img/logo.png" width=20px height=20px style="text-align:center"></img>  
+<img src="../public/img/logo.png" width=20px height=20px style="text-align:left"></img>
 <br>
 
 ## 6. 코드 강조
