--- a/_posts/2019-10-04-markdown문법.md
+++ b/_posts/2019-10-04-markdown문법.md
@@ -78,9 +78,8 @@ Markdown 문법에 대해 알아보자
 ## 5. 이미지
 ---
 `![이미지이름](이미지경로)`
-<center> 
 ![logo](/public/img/logo.png)
-</center>
+
 
 
 
@@ -90,7 +89,7 @@ Markdown 문법에 대해 알아보자
 
 이미지 정렬  
 `![이미지이름](이미지경로) {:.alignleft}`  
-<img src="../public/img/logo.png" width="20px" height="20px" style="text-align:right"></img>  
+<img src="https://sanggil1107.github.io/public/img/logo.png" width="20px" height="20px" style="text-align:right"></img>  
 <img src="../public/img/logo.png" width="20px" height="20px" style="text-align:center"></img>  
 <img src="../public/img/logo.png" width="20px" height="20px" style="text-align:left"></img>
 <br>
