--- a/_posts/2019-10-04-markdown문법.md
+++ b/_posts/2019-10-04-markdown문법.md
@@ -81,8 +81,6 @@ Markdown 문법에 대해 알아보자
 ![logo](/public/img/logo.png)
 
 
-
-
 이미지 크기  
 `<img src="url" width="whatever" height="whatever"></img>`  
 <img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px">
@@ -91,7 +89,7 @@ Markdown 문법에 대해 알아보자
 `<img src="url" width="whatever" height="whatever"></img>`  
 <img src="https://sanggil1107.github.io/public/img/logo.png" width="100px" height="100px" style="float: right;">  
 <img src="https://sanggil1107.github.io/public/img/logo.png" width="100px" height="100px" style="float: center;">
-<img src="https://sanggil1107.github.io/public/img/logo.png" width="100px" height="100px" style="float: left;">
+<img src="https://sanggil1107.github.io/public/img/logo.png" width="100px" height="100px" style="float: left;"></img>
 <br>
 
 ## 6. 코드 강조
