--- a/_posts/2019-10-04-markdown문법.md
+++ b/_posts/2019-10-04-markdown문법.md
@@ -87,9 +87,13 @@ Markdown 문법에 대해 알아보자
 
 이미지 정렬  
 `<img src="url" width="whatever" height="whatever"></img>`  
-<img src="https://sanggil1107.github.io/public/img/logo.png" width="100px" height="100px" style="float: right;">  
-<img src="https://sanggil1107.github.io/public/img/logo.png" width="100px" height="100px" style="float: center;">
-<img src="https://sanggil1107.github.io/public/img/logo.png" width="100px" height="100px" style="float: left;"></img>
+
+<img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px" style="float: right;">  
+
+<img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px" style="display: block;margin: 0 auto;">
+
+<img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px" style="float: left;">  
+
 <br>
 
 ## 6. 코드 강조
