--- a/_posts/2019-10-04-markdown문법.md
+++ b/_posts/2019-10-04-markdown문법.md
@@ -9,8 +9,6 @@ Markdown 문법에 대해 알아보자
 <!-- more -->
 
 ## 1. 제목 
-<hr/>
-
 
 # 제목
 # 제목1
@@ -21,29 +19,21 @@ Markdown 문법에 대해 알아보자
 ###### 제목6
 
 제목7
-=======
 
 제목8 
-------
 
-<br>
 
 ## 2. 강조
 
 이텔릭체(`<em>`)는 *별표* 혹은 _언더바_ 를 사용<br>
 두껍게(`<strong>`)는 **별표 2개** 혹은 __언더바2개__ 를 사용<br>
 취소선(`<del>`)은 ~~물결~~을 사용<br>
-<u>밑줄</u>은 `<u>`를 사용
+<u>밑줄</u>은 `<u>`를 사용  
 
 <br>
+  
 
 ## 3. 목록 ##
-
-
-----
-
-
-
 
 1. 순서1
 1. 순서2
@@ -62,7 +52,7 @@ Markdown 문법에 대해 알아보자
 <br>
 
 ## 4. 링크
----
+
 [google](https://gogle.com)
 
 [naver](https://naver.com)
@@ -80,8 +70,7 @@ Markdown 문법에 대해 알아보자
 
 <br>
 
-# 5. 이미지
----
+## 5. 이미지
 
 `![이미지이름](이미지경로)`
 ![logo](/public/img/logo.png)
@@ -105,7 +94,7 @@ Markdown 문법에 대해 알아보자
 
 
 ## 6. 코드 강조
----
+
 `인라인 코드 강조`
 
 ```html
@@ -148,7 +137,6 @@ No language
 <br>
 
 ## 7. 표
----
 
 |값|의미|기본값|
 |:----:|:----:|:----:|
@@ -157,7 +145,7 @@ No language
 <br>
 
 ## 8. 인용문
----
+
 인용문
 > `>`  기호를 사용
 
@@ -168,7 +156,7 @@ No language
 <br>
 
 ## 9. 수평선
----
+
 ---
 `---`
 
@@ -181,7 +169,7 @@ ___
 <br>
 
 ## 10. 줄바꿈
-* * *
+
 줄바꿈의 경우 '2번의 띄워쓰기'나  
 html의 `<br>`을 <br> 
 사용할 수 있습니다.
