--- a/_posts/2019-10-18-docker란.md
+++ b/_posts/2019-10-18-docker란.md
@@ -7,3 +7,37 @@ category: [Docker]
 Docker에 대해 알아보자
 <!-- more -->
 <hr>
+
+# 가상화 기술과 컨테이너
+가상 머신을 구성하기 위해서 우리는 VMWare, VirtualBox, KVM, Hyper-V 기술을 사용했으나, 최근에는 Docker로 대표되는 LXC(Linux Container)와 같은 컨테이너형 가상화로 옮겨지고 있는 추세이다.  
+컨테이너형 가상화 기술은 기존의 가상화 기술보다 가벼워지고, 이식성이 뛰어난 특징을 가지고 있다.
+
+# 기존의 가상머신
+가상 머신 자체는 완전한 컴퓨터라 할 수 있다.  
+OS를 자체적으로 가지고 있기 때문에 OS를 가상머신 이미제 포함해야 하고, 배포이미지의 용량이 커지게 되는 단점이 있다. 
+전가상화, 반가상화 게스트 OS를 설치하여 운영하는 방식은 하드웨어 성능을 100% 뽑아내기 어렵다는 단점을 가지고 있기 떄문에 성능 개선 문제가 대두 되었고, 이를 해결하기 위한 프로세스 격리 방식이 나오게 되었다.
+
+# 컨테이너 기술
+리눅스에서는 리눅스 컨테이너라 불리는 곳에 프로세스를 격리시키는데, OS의 내부에는 물리적 자원을 관리하는 커널공간과 사용자 프로세스를 실행하는 사용자 공간으로 나뉘어진다.  
+컨테이너 가상화는 사용자 공간을 여러 개로 나누어 각각의 사용자 프로세스에서 보이는 리소스를 제한하여 CPU나 메모리는 프로세스가 필요한 만큼만 추가적으로 사용하고 성능적으로 거의 손실이 없다.  
+기존의 가상화 기술에서는 가상 머신이 실제 물리 하드웨어에 에뮬레이트하기 떄문에 OS가 반드시 필요하다.  
+LXC는 모든 프로세스는 호스트 OS에서 시작하며, 일반적인 프로세스와 달리 그 과정의 일부를 그룹화하고 다른 그룹과 그룹에 속하지 않는 프로세스에서 단절된 공간으로 동작한다는 것이다.  
+이러한 방식의 차이점 떄문에 가상화 오버헤드가 거의 발생하지 않고 가상 머신의 부팅 및 종료라는 개념이 존재하지 않는다.  
+OS가 사용하는 자원을 분리하여 여러 환경을 만들 수 있고, 가상 환경의 시작과 종료를 빠르게 실행할 수 있다.  
+컨테이너 방식은 OS에서 관리하기 때문에 "OS 레벨 가상화"라고 불리기도 한다.
+
+# 컨테이너의 장점과 기술
+빠른 시작과 종료 속도  
+LXC를 사용하다 보면 다른 가상화 기술머신보다 시작과 종료가 빠르다는 것을 알 수 있다. 컨테이너를 생성한다는 것은 OS 입장에서 단순히 프로세스를 시작하는 것이기 때문에 일반적인 프로세스가 시작하는 것과 별반 차이가 없다.  
+가상환경이 커널에서 공유되기 때문에 새로운 커널을 시작할 필요가 없고, 하드웨어 초기화 등의 작업이 필요없다.  
+높은 집적도  
+컨테이너는 커널이 직접 프로세스를 조작하여 분리된 공간을 구성하기 때문에 PC상에서 동작하는 OS는 하나이다.  
+여러 개의 컨테이너를 만들어 실행 중이라고 해도 OS는 하나이기 때문에, 가상머신에 비해 고밀도가 가능하다.  
+컨테이너에서는 실행되는 프로세스를 위한 메모리만 필요하기 때문에 낮은 사양의 환경에서도 동작이 가능하다.  
+낮은 오버해드  
+가상화를 위한 하드웨어 에뮬레이트 단계없이, 분리된 공간을 만들기 때문에 오버해드가 줄어든다.  
+애플리이케이션 컨테이너 지원  
+컨테이너는 가상머신과 달리 init을 먼저 시작하거나 각종 데몬들을 실행할 필요가 없다.  
+컨테이너는 목적에 맞는 프로세스만 존재하는 환경을 만들 수 있다. 예를 들어 웹서버용 컨테이너라면 Apache Httpd 프로세스만 존재하는 컨테이너를 만들 수 있다.  
+이러한 환경을 애플리케이션 컨테이너라고 하며, init를 처음 시작하여 보통의 OS가 시작하는 것과 같은 환경을 만들 수 있는데 이를 시스템 컨테이너라고 부른다.
+
