--- a/_posts/2019-10-21-[알고리즘]선택정렬.md
+++ b/_posts/2019-10-21-[알고리즘]선택정렬.md
@@ -14,24 +14,21 @@ category: [알고리즘]
 
 ## 1단계
 첫 번째 위치에 있는 69를 두 번째 위치부터 마지막 위치까지 비교하여 가장 작은 원소 2를 찾은 후 자리를 바꾼다.  
-![선택정렬0](/public/img/알고리즘/선택정렬0.png)
-
+<img src="https://sanggil1107.github.io//public/img/알고리즘/선택정렬0.png" style="display: block;margin: 0 auto;">
 
 ## 2단계
 두 번째 위치에 있는 10을 세 번째 위치부터 마지막 위치까지 비교하여 가장 작은 원소 8을 찾은 후 자리를 바꾼다.
-![선택정렬1](/public/img/알고리즘/선택정렬1.png)
-
+<img src="https://sanggil1107.github.io//public/img/알고리즘/선택정렬1.png" style="display: block;margin: 0 auto;">
 
 ## 3단계
 세 번째 위치에 있는 30을 네 번째 위치부터 마지막 위치까지 비교하여 가장 작은 원소 10을 찾은 후 자리를 바꾼다.
-![선택정렬2](/public/img/알고리즘/선택정렬2.png)
-
+<img src="https://sanggil1107.github.io//public/img/알고리즘/선택정렬2.png" style="display: block;margin: 0 auto;">
 
 ## 4단계
 네 번째 위치에 있는 69를 다섯 번째 위치부터 마지막 위치까지 비교하여 가장 작은 원소 16을 찾은 후 자리를 바꾼다.
-![선택정렬3](/public/img/알고리즘/선택정렬3.png)
+<img src="https://sanggil1107.github.io//public/img/알고리즘/선택정렬3.png" style="display: block;margin: 0 auto;">
 
 
 ## 5단계
 다섯 번째 위치에 있는 69를 마지막 위치에 있는 30과 자리를 바꾼다.
-![선택정렬4](/public/img/알고리즘/선택정렬4.png)
+<img src="https://sanggil1107.github.io//public/img/알고리즘/선택정렬4.png" style="display: block;margin: 0 auto;">
