--- a/_posts/2019-10-04-markdown문법.md
+++ b/_posts/2019-10-04-markdown문법.md
@@ -8,33 +8,53 @@ Markdown 문법에 대해 알아보자
 <!-- more -->
 <hr>
 
-## 1. 제목 
+# Markdown 문법
 
-# 제목
+## 제목(`<h1> ~ <h6>`) 
+---
+`#`로 표현  
+`#` 갯수에 따라 `<h1>`부터 `<h6>`까지 매핑
+```
+# 제목1 
+## 제목2
+### 제목3
+#### 제목4
+##### 제목5
+###### 제목6
+```
 # 제목1
 ## 제목2
 ### 제목3
 #### 제목4
 ##### 제목5
 ###### 제목6
-
-제목7
-
-제목8 
-
-
-## 2. 강조
-
-이텔릭체(`<em>`)는 *별표* 혹은 _언더바_ 를 사용<br>
-두껍게(`<strong>`)는 **별표 2개** 혹은 __언더바2개__ 를 사용<br>
-취소선(`<del>`)은 ~~물결~~을 사용<br>
-<u>밑줄</u>은 `<u>`를 사용  
-
 <br>
-  
 
-## 3. 목록 ##
+## 강조(`<em>`, `<strong>`, `<del>`, `<u>`)
+---
+기울기는 `*` 혹은 `_` 로 표현 
+굵기는 `**` 혹은 `__`로 표현  
+취소선은 `~~`로 표현  
+밑줄은 `<u>`로 표현
+```
+*기울기* 혹은 _기울기_  
+**굵기** 혹은 __굵기__   
+~~취소선~~  
+<u>밑줄</u>  
+```
+*기울기* 혹은 _기울기_  
+**굵기** 혹은 __굵기__   
+~~취소선~~  
+<u>밑줄</u>  
+<br>
 
+
+## 목록(`<ol>`, `<ul>`)
+---
+순서있는 목록의 경우 숫자로 표현  
+순서없는 목록의 경우 `-`, `+`, `*`로 표현  
+계층 표현 시, 탭 입력 후 표현
+```
 1. 순서1
 1. 순서2
 1. 순서3
@@ -43,66 +63,108 @@ Markdown 문법에 대해 알아보자
     1. 순서6
     1. 순서7
 - 순서8  
-    * 순서9  
-    + 순서10  
-    - 순서11  
-* 순서12
-+ 순서13
+    - 순서9   
+
+* 순서10
++ 순서11
+```
+1. 순서1
+1. 순서2
+1. 순서3
+    - 순서4
+1. 순서5
+    1. 순서6
+    1. 순서7
+- 순서8  
+    - 순서9   
+* 순서10
++ 순서11
 
 <br>
 
-## 4. 링크
-
-[google](https://gogle.com)
-
+## 링크(`<a>`)
+---
+`[링크명](URL)`형식으로 사용  
+`[링크명]`, `[링크명] : (URL)` 형식으로 문서 안에서 참조링크 가능  
+문서내 일반 URL이나 꺾쇠 괄호 안의 URL은 자동 링크
+```
+[google](https://google.com)  
 [naver](https://naver.com)
 
-[Github][1]
+[참조링크] 
 
-문서 안에서 [참조링크] 사용 가능합니다.
-
-문서내 일반 URL이나 꺾쇠 괄호안의 URL은 자동으로 링크 됩니다.<br>
-구글 : https://google.com<br>
+구글 : https://google.com  
 네이버 : <https://naver.com>
 
-[1]: https://github.com
 [참조링크]: https://naver.com
+```
+[google](https://google.com)  
+[naver](https://naver.com)
+
+[참조링크] 
+
+구글 : https://google.com  
+네이버 : <https://naver.com>
+
+[참조링크]: https://naver.com
+
 
 <br>
 
-## 5. 이미지
-
-`![이미지이름](이미지경로)`
+## 이미지(`<img>`)
+---
+`![이미지이름](이미지경로)` 형식으로 사용
+```
+![logo](/public/img/logo.png)
+```
 ![logo](/public/img/logo.png)
 
 
-이미지 크기  
-`<img src="url" width="whatever" height="whatever"></img>`  
+### 이미지 크기  
+---
+`<img src="url" width="" height=""></img>` 와 같이 html 형식으로 표현  
 <img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px">
 
-이미지 정렬  
-`<img src="url" width="whatever" height="whatever"></img>`  
+### 이미지 정렬  
+---
+`<img src="url" style=""></img>` 와 같이 html 형식으로 표현  
+- 가운데 정렬 : `style="display: block;margin: 0 auto;"`  
+- 왼쪽 정렬 : `style="float: left;"`  
+- 오른쪽 정렬 : `style="float: right;"`
+```
 <img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px" style="display: block;margin: 0 auto;">
 <img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px" style="float: right;">  
-
-
-
 <img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px" style="float: left;">  
 <br>
+```
+<img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px" style="display: block;margin: 0 auto;">
+<img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px" style="float: right;">  
+<img src="https://sanggil1107.github.io/public/img/logo.png" width="50px" height="50px" style="float: left;">  
+
 <br>
-  
+<br>
+<br>
 
-
-## 6. 코드 강조
-
+## 코드 강조(`<pre>`, `<code>`)
+---
+### 인라인 코드 강조
+---
+숫자 1번 왼쪽에 있는 ``` ` ```로 표현
+```
+`인라인 코드 강조`
+```
 `인라인 코드 강조`
 
+### 블록 코드 강조
+---
+``` ` ```를 3번 입력하여 표현 (코드 종류도 작성 가능)
+`````
 ```html
-<a href="https://naver.com" target="_blank">Naver</a>
+<a href="https://google.com">Google</a>
 ```
 
 ```css
-.list > li {
+.list {
     position: fixed;
     top: 5px;
 }
@@ -111,11 +173,12 @@ Markdown 문법에 대해 알아보자
 ```javascript
 function func() {
     var a = AAA';
-    return a;
+    alert(a);
 }
 ```
+
 ```bash
-$ vim ./~bash
+$ ls -al
 ```
 
 ```python
@@ -123,52 +186,109 @@ s = "python is simple"
 print(s)
 ```
 
-```java
-public static void main()
-{
-    system.out.println("java");
+```
+No language
+```
+`````
+
+```html
+<a href="https://google.com">Google</a>
+```
+
+```css
+.list {
+    position: fixed;
+    top: 5px;
 }
+```
+
+```javascript
+function func() {
+    var a = AAA';
+    alert(a);
+}
+```
+
+```bash
+$ ls -al
+```
+
+```python
+s = "python is simple"
+print(s)
 ```
 
 ```
 No language
 ```
+<br>
+
+## 표(`<table>`)
+---
+`---` 으로 헤더 셀을 구분할 수 있으며 `:` 기호로 셀 안의 내용 정렬 가능  
+`|` 로 행,열 표현  
+가장 좌측과 우측의 `|`는 생략 가능  
+
+```
+|이름|나이|키|주소|
+|:----:|:----:|:----:|:---:|
+|sanggil|29|180|서울시 영등포구|
+|gildong|50|175||
+
+이름|나이|키|주소
+---|---|---|---
+sunsin|200|190|서울시 도봉구
+minsu|5|150|서울시 강남구
+```
+|이름|나이|키|주소|
+|:----:|:----:|:----:|:---:|
+|sanggil|29|180|서울시 영등포구|
+|gildong|50|175||
+
+이름|나이|키|주소
+---|---|---|---
+sunsin|200|190|서울시 도봉구
+minsu|5|150|서울시 강남구
 
 <br>
 
-## 7. 표
+## 인용문(`<blockquote>`)
+---
+`>`  기호로 표현
+```
+> 인용문 사용
+>> 중첩된 인용문 가능
+>>> 중첩된 인용문 가능
 
-|값|의미|기본값|
-|:----:|:----:|:----:|
-|static|유형 없음|static|
-
-<br>
-
-## 8. 인용문
-
-인용문
-> `>`  기호를 사용
-
+```
 > 인용문 사용
 >> 중첩된 인용문 가능
 >>> 중첩된 인용문 가능
 
 <br>
 
-## 9. 수평선
+## 수평선(`<hr>`)
 ---
-`---`
-
+하이픈(`---`) 이나 별표(`***`), 언더바(`___`) 3개 이상을 입력하여 표현
+```
+---
 ***
-`***`
-
 ___
-`___`
+```
+---
+***
+___
 
 <br>
 
-## 10. 줄바꿈
-
-줄바꿈의 경우 '2번의 띄워쓰기'나  
-html의 `<br>`을 <br> 
+## 줄바꿈(`<br>`)
+---
+`<br>` 혹은 띄워쓰기 2번으로 표현
+```
+2번의 띄워쓰기나  
+html의 `<br>` 태그를 <br> 
+사용할 수 있습니다.
+```
+2번의 띄워쓰기나  
+html의 `<br>` 태그를 <br> 
 사용할 수 있습니다.
