--- a/_posts/2019-10-04-markdown문법.md
+++ b/_posts/2019-10-04-markdown문법.md
@@ -178,10 +178,6 @@ function func() {
 }
 ```
 
-```bash
-$ ls -al
-```
-
 ```python
 s = "python is simple"
 print(s)
@@ -210,10 +206,6 @@ function func() {
 }
 ```
 
-```bash
-$ ls -al
-```
-
 ```python
 s = "python is simple"
 print(s)
@@ -234,7 +226,7 @@ No language
 |이름|나이|키|주소|
 |:----:|:----:|:----:|:---:|
 |sanggil|29|180|서울시 영등포구|
-|gildong|50|175| |
+|gildong|50|175|대전시 둔산동|
 
 이름|나이|키|주소
 ---|---|---|---
