--- a/_posts/2019-12-08-[HTML]hr,a태그.md
+++ b/_posts/2019-12-08-[HTML]hr,a태그.md
@@ -1,11 +1,12 @@
 ---
 layout: post
-title: "[HTML] 2.<h>, <a> 태그"
+title: "[HTML] 2.h a 태그"
 category: [HTML]
 
 ---
 <br>
-<h>, <a> 태그에 대해 알아보자
+
+`<h>, <a>` 태그에 대해 알아보자
 <!-- more -->
 <hr>
 
@@ -13,8 +14,7 @@ category: [HTML]
 # `<h>` 태그
 ---
 `<h>` 태그들은 웹 페이지의 컨텐츠 내에서 헤드라인(제목)을 표시할 때 사용한다.   
-`<h>` 태그는 h1을 시작으로 h6까지 있으며 숫자가 커질수록 클자크기가 작아진다.
-
+`<h>` 태그는 h1을 시작으로 h6까지 있으며 숫자가 커질수록 글자크기가 작아진다.
 
 ```html
 <!DOCTYPE html>
