--- a/_posts/2019-12-08-[HTML]hr,a태그.md
+++ b/_posts/2019-12-08-[HTML]hr,a태그.md
@@ -34,6 +34,8 @@ category: [HTML]
     </body>
 </html>
 ```
+<img src="https://sanggil1107.github.io//public/img/html/h.PNG" style="display: block;margin: 0 auto;">
+<br>
 
 # `<a>` 태그
 ---
@@ -43,7 +45,7 @@ category: [HTML]
 ---
 |속성|의미|값|기본값|
 |---|---|---|---|
-|href|링크 URL|URL||
+|href|링크 URL|URL| |
 |target|링크 클릭 시 브라우저 탭 위치|`_self`, `_blank`|`_self`|
 
 ```html
@@ -60,3 +62,4 @@ category: [HTML]
     </body>
 </html>
 ```
+<img src="https://sanggil1107.github.io//public/img/html/a.PNG" style="display: block;margin: 0 auto;">
