--- a/_posts/2019-12-08-[HTML]hr,a태그.md
+++ b/_posts/2019-12-08-[HTML]hr,a태그.md
@@ -34,7 +34,7 @@ category: [HTML]
     </body>
 </html>
 ```
-<img src="https://sanggil1107.github.io//public/img/html/h.PNG" style="display: block;margin: 0 auto;">
+<img src="https://sanggil1107.github.io//public/img/html/h.PNG" >
 <br>
 
 # `<a>` 태그
@@ -43,6 +43,7 @@ category: [HTML]
 
 ## 속성
 ---
+
 |속성|의미|값|기본값|
 |---|---|---|---|
 |href|링크 URL|URL| |
@@ -62,4 +63,4 @@ category: [HTML]
     </body>
 </html>
 ```
-<img src="https://sanggil1107.github.io//public/img/html/a.PNG" style="display: block;margin: 0 auto;">
+<img src="https://sanggil1107.github.io//public/img/html/a.PNG">
