--- a/_posts/2019-12-08-[HTML]hr,a태그.md
+++ b/_posts/2019-12-08-[HTML]hr,a태그.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[HTML] 2.h a 태그"
+title: "[HTML] h a 태그"
 category: [HTML]
 
 ---
@@ -45,7 +45,7 @@ category: [HTML]
 ---
 
 |속성|의미|값|기본값|
-|---|---|---|---|
+|:---:|:---:|:---:|:---:|
 |href|링크 URL|URL| |
 |target|링크 클릭 시 브라우저 탭 위치|`_self`, `_blank`|`_self`|
 
