--- a/_posts/2019-12-09-[HTML]텍스트서식태그.md
+++ b/_posts/2019-12-09-[HTML]텍스트서식태그.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[HTML] 5.인라인 - b, strong, i, em, u, ins, del, sub, pub 태그"
+title: "[HTML] 인라인 - b, strong, i, em, u, ins, del, sub, pub 태그"
 category: [HTML]
 
 ---
