--- a/_posts/2019-12-08-[HTML]hr,a태그.md
+++ b/_posts/2019-12-08-[HTML]hr,a태그.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[HTML] h a 태그"
+title: "[HTML] h, a 태그"
 category: [HTML]
 
 ---
@@ -11,7 +11,7 @@ category: [HTML]
 <hr>
 
 
-# `<h>` 태그
+## `<h>`태그
 ---
 `<h>` 태그들은 웹 페이지의 컨텐츠 내에서 헤드라인(제목)을 표시할 때 사용한다.   
 `<h>` 태그는 h1을 시작으로 h6까지 있으며 숫자가 커질수록 글자크기가 작아진다.
@@ -37,11 +37,11 @@ category: [HTML]
 <img src="https://sanggil1107.github.io//public/img/html/h.PNG" >
 <br>
 
-# `<a>` 태그
+## `<a>` 태그
 ---
 `<a>` 태그는 하이퍼링크 태그로 웹페이지에서 링크를 통해서 다른 웹페이지로 이동을 하거나 또는 문서내에서 이동을 할 때 사용한다.   
 
-## 속성
+### 속성
 ---
 
 |속성|의미|값|기본값|
