--- a/_posts/2019-12-15-[HTML]시멘틱 태그.md
+++ b/_posts/2019-12-15-[HTML]시멘틱 태그.md
@@ -17,14 +17,6 @@ category: [HTML]
 시멘틱 태그란 웹페이지의 구조를 쉽게 이해할 수 있도록 정의된 태그를 의미한다.  
 시멘틱 태그 이전에는 아래와 같이 `<div>` 태그의 `id` 나 `class` 속성을 이용하여 레이아웃을 구현하였고 이는 개발자마다 다르게 지정하는 등 불편함이 있었다. 또한 `<div>` 태그나 너무 많아 복잡해지는 문제도 있었다.
 
-<p class="codepen" data-height="600" data-theme-id="default" data-default-tab="css,result" data-user="omfazpiq" data-slug-hash="wvBqYVd" style="height: 600px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="wvBqYVd">
-  <span>See the Pen <a href="https://codepen.io/omfazpiq/pen/wvBqYVd">
-  wvBqYVd</a> by 양상길 (<a href="https://codepen.io/omfazpiq">@omfazpiq</a>)
-  on <a href="https://codepen.io">CodePen</a>.</span>
-</p>
-<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-
-
 ```html
 <!DOCTYPE html>
 <html>
@@ -131,4 +123,11 @@ category: [HTML]
     </body>
 </html>
 ```
+<p class="codepen" data-height="500" data-theme-id="default" data-default-tab="result" data-user="omfazpiq" data-slug-hash="PowKxoW" style="height: 500px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;" data-pen-title="PowKxoW">
+  <span>See the Pen <a href="https://codepen.io/omfazpiq/pen/PowKxoW">
+  PowKxoW</a> by 양상길 (<a href="https://codepen.io/omfazpiq">@omfazpiq</a>)
+  on <a href="https://codepen.io">CodePen</a>.</span>
+</p>
+<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+
 <img src="https://sanggil1107.github.io//public/img/html/시멘틱결과.PNG" >
