--- a/_posts/2019-12-20-[CSS]CSS란.md
+++ b/_posts/2019-12-20-[CSS]CSS란.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "[CSS] CSS란"
+category: [CSS]
+
+---
+<br>
+
+`CSS`에 대해 알아보자
+<!-- more -->
+
+<hr>
+
 # CSS란
 ---
 `CSS(Cascading Style Sheet)` 는 마크업 언어가 실제 표시되는 방법을 기술하는 언어로, 주로 HTML에 쓰이며 XML에서도 사용할 수 있다.  
