--- a/_posts/2020-01-04-[CSS]타이포그래피.md
+++ b/_posts/2020-01-04-[CSS]타이포그래피.md
@@ -34,7 +34,7 @@ category: [CSS]
 -  대표 font
 
 ```css
-div {
+선택자 {
     font-family: Arial, Helvetica, sans-serif;
 }
 ```
@@ -400,7 +400,7 @@ p {
     </body>
 </html>
 ```
-<img src="https://sanggil1107.github.io//public/img/css/bgcolor.PNG" >
+<img src="https://sanggil1107.github.io//public/img/css/textshadow.PNG" >
 <br>
 
 ## white-space
