--- a/_posts/2020-09-24-Git명령어.md
+++ b/_posts/2020-09-24-Git명령어.md
@@ -14,7 +14,6 @@ category: [Git]
 
 1. github upload(A)
 ```
-git init
 git add .
 git commit -m "프로젝트 시작"
 git remote add origin [repository 주소]
@@ -37,7 +36,7 @@ git branch branB
 git add .
 git commit -m "message"
 git checkout master
-git merge branB  # (checkout된 현재)master에 branB를 merge
+git merge branB
 git push origin master
 ```
 
@@ -46,5 +45,5 @@ git push origin master
 git checkout master
 git pull origin master
 git checkout branA
-git merge master  # (checkout된 현재)branA에 master를 merge
+git merge master
 ```
