--- a/_posts/2020-09-24-Git명령어.md
+++ b/_posts/2020-09-24-Git명령어.md
@@ -11,6 +11,32 @@ category: [Git]
 
 <hr>
 
+## 환경설정
+`git config --global list`  
+-  현재 설정 정보 조회
+
+`git config --global user.name "사용자명"`
+- 사용자명 등록
+
+`git config --global user.email "이메일주소"`
+- 이메일 주소 등록
+
+
+## 기본 명령어
+`git --version`
+- 현재 git 버전
+
+`git init`
+- 현재 디렉토리에 git 저장소 생성
+
+`git add`
+- 스테이징 영역에 올림
+
+`git commit -m "메세지"`
+- 스테이징 영역에 올라가 있는 파일들을 커밋
+
+`git status`
+- 커밋되지 않은 변경사항 조회
 
 1. github upload(A)
 ```
