--- a/_posts/2020-09-24-Git명령어.md
+++ b/_posts/2020-09-24-Git명령어.md
@@ -41,6 +41,19 @@ category: [Git]
 - 커밋되지 않은 변경사항 조회
 
 `git diff`
+- 스테이징영역과 현재 작업트리의 차이점을 보여줌
+
+
+## 원격 저장소
+---
+`git clone 저장소주소`
+- 원격 저장소를 복제하여 저장소 생성
+
+`git remote`
+- 추가한 원격 저장소의 목록 확인
+
+`git remote add origin 저장소주소`
+- 새로운 원격 저장소를 추가
 
 
 ## 특정 케이스
