--- a/_posts/2020-09-24-Git명령어.md
+++ b/_posts/2020-09-24-Git명령어.md
@@ -49,12 +49,14 @@ category: [Git]
 `git clone 저장소주소`
 - 원격 저장소를 복제하여 저장소 생성
 
-`git remote`
+`git remote (-v)`
 - 추가한 원격 저장소의 목록 확인
 
 `git remote add origin 저장소주소`
 - 새로운 원격 저장소를 추가
 
+`git remote remove origin`
+- 연결된 원격 저장소 해제
 
 ## 특정 케이스
 ---
